fixed the h1 and h3 whitespaceproblem, there was another h1 styling I did not see

--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@ body {
 
 body h1 {
     font-size:7.5em;
-    margin-top: 0.2em;
-    margin-bottom: 0.2em;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 body nav {
@@ -29,10 +29,13 @@ h1 {
     font-size: 3em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     max-width: 50%;
+    line-height: 0.9em;
 }
 
 h3 {
     padding-left: 5%;
+    font-size: 2.2rem;
+    margin-top: 0;
 }
 
 .title-and-objective {
